--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2446,6 +2446,7 @@ layers:
                                 /^DJ.*$/.test(feature.ref) ||
                                 /^E.*$/.test(feature.ref) ||
                                 /^ECP.*$/.test(feature.ref) ||
+                                /^EI.*$/.test(feature.ref) ||
                                 /^EX.*$/.test(feature.ref) ||
                                 /^J.*$/.test(feature.ref) ||
                                 /^K.*$/.test(feature.ref) ||
@@ -2454,6 +2455,8 @@ layers:
                                 /^LM.*$/.test(feature.ref) ||
                                 /^LR.*$/.test(feature.ref) ||
                                 /^M.*$/.test(feature.ref) ||
+                                /^Ma.*$/.test(feature.ref) ||
+                                /^Me.*$/.test(feature.ref) ||
                                 /^M-.*$/.test(feature.ref) ||
                                 /^MCE.*$/.test(feature.ref) ||
                                 /^MEX.*$/.test(feature.ref) ||
@@ -4498,6 +4501,7 @@ layers:
                                         /^DJ.*$/.test(feature.ref)  ||
                                         /^E.*$/.test(feature.ref)  ||
                                         /^ECP.*$/.test(feature.ref)  ||
+                                        /^EI.*$/.test(feature.ref)  ||
                                         /^EX.*$/.test(feature.ref)  ||
                                         /^IN:NH*$/.test(feature.network) ||
                                         /^IN:SH*$/.test(feature.network) ||
@@ -4511,6 +4515,8 @@ layers:
                                         /^LM.*$/.test(feature.ref) ||
                                         /^LR.*$/.test(feature.ref) ||
                                         /^M.*$/.test(feature.ref) ||
+                                        /^Ma.*$/.test(feature.ref) ||
+                                        /^Me.*$/.test(feature.ref) ||
                                         /^M-.*$/.test(feature.ref) ||
                                         /^MCE.*$/.test(feature.ref) ||
                                         /^N-.*$/.test(feature.ref)  ||
@@ -4541,6 +4547,7 @@ layers:
                                         /^C-.*$/.test(feature.ref) ||
                                         /^CT.*$/.test(feature.ref) ||
                                         /^CU.*$/.test(feature.ref) ||
+                                        /^EI.*$/.test(feature.ref) ||
                                         /^M-.*$/.test(feature.ref) ||
                                         /^MO.*$/.test(feature.ref) ||
                                         /^NH.*$/.test(feature.ref) ||
@@ -5294,6 +5301,43 @@ layers:
                             function() {
                                 return feature.shield_text && (
                                     /^AS.*$/.test(feature.ref)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'ES:A-' + feature.shield_text.length + 'char');
+                                    }
+                                text:
+                                    font:
+                                        fill: [1.00,1.00,1.00]
+
+                    # BALEARIC ISLANDS
+                    Ma-Balearic:
+                        filter: |
+                            function() {
+                                return feature.ref && (
+                                    /^Ma.*$/.test(feature.ref) ||
+                                    /^Me.*$/.test(feature.ref) ||
+                                    /^EI.*$/.test(feature.ref)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'ES:A-' + feature.ref.length + 'char');
+                                    }
+                                text:
+                                    font:
+                                        fill: [1.00,1.00,1.00]
+
+                    EI-Balearic-shield-text:
+                        filter: |
+                            function() {
+                                return feature.shield_text && (
+                                    /^EI.*$/.test(feature.ref)
                                 )
                             }
                         draw:
